// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Examples correctly 1`] = `
<div>
  <div
    class="page"
  >
    <nav
      class="main-nav"
    >
      <header>
        <a
          href="/workflows"
        >
          <img
            alt="Workbench"
            src="undefinedimages/workbench-logo-with-white-text.svg"
          />
        </a>
        <button
          class="toggle-open"
          title="menu"
        >
          /app/assets/icons/menu.svg
        </button>
      </header>
      <div
        class="details"
      >
        <ul>
          <li
            class=""
          >
            <a
              href="/workflows"
            >
              My workflows
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="/workflows/shared-with-me"
            >
              Shared with me
            </a>
          </li>
          <li
            class="open"
          >
            <a>
              Community workflows
            </a>
          </li>
          <li
            class="parent"
          >
            <a
              href="/lessons"
            >
              Tutorials
            </a>
          </li>
        </ul>
        <div
          class="user-paths"
        >
          <h3
            class="display-name"
          >
            Example User
          </h3>
          <ul>
            <li
              class="parent"
            >
              <a
                href="/settings/plan"
              >
                Plan & Billing
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Language
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Log Out
              </a>
              <form
                action="/account/logout/"
                class="hidden"
                method="post"
              >
                <input
                  name="csrfmiddlewaretoken"
                  type="hidden"
                  value=""
                />
                <input
                  name="next"
                  type="hidden"
                  value="/workflows/examples"
                />
                <input
                  type="submit"
                />
              </form>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="workflows"
    >
      <header>
        <h1>
          Community workflows
        </h1>
      </header>
      <div
        class="workflow-list example"
      >
        <table>
          <thead>
            <tr>
              <th
                class="title"
              >
                <a
                  href="#"
                >
                  Title
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="owner"
              >
                Owner
              </th>
              <th
                class="privacy"
              >
                <a
                  href="#"
                >
                  Privacy
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="fetches-per-day"
              >
                <a
                  href="#"
                >
                  Auto updates
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="updated"
              >
                <a
                  href="#"
                >
                  Updated
                  /app/assets/icons/sort-descending.svg
                </a>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/10"
                >
                  Demo 1
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/10"
                >
                  Workbench
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/10"
                >
                  private
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/10"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/10"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </main>
  </div>
</div>
`;

exports[`render My workflows correctly 1`] = `
<div>
  <div
    class="page"
  >
    <nav
      class="main-nav"
    >
      <header>
        <a>
          <img
            alt="Workbench"
            src="undefinedimages/workbench-logo-with-white-text.svg"
          />
        </a>
        <button
          class="toggle-open"
          title="menu"
        >
          /app/assets/icons/menu.svg
        </button>
      </header>
      <div
        class="details"
      >
        <ul>
          <li
            class="open"
          >
            <a>
              My workflows
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="/workflows/shared-with-me"
            >
              Shared with me
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="/workflows/examples"
            >
              Community workflows
            </a>
          </li>
          <li
            class="parent"
          >
            <a
              href="/lessons"
            >
              Tutorials
            </a>
          </li>
        </ul>
        <div
          class="user-paths"
        >
          <h3
            class="display-name"
          >
            Example User
          </h3>
          <ul>
            <li
              class="parent"
            >
              <a
                href="/settings/plan"
              >
                Plan & Billing
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Language
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Log Out
              </a>
              <form
                action="/account/logout/"
                class="hidden"
                method="post"
              >
                <input
                  name="csrfmiddlewaretoken"
                  type="hidden"
                  value=""
                />
                <input
                  name="next"
                  type="hidden"
                  value="/workflows"
                />
                <input
                  type="submit"
                />
              </form>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="workflows"
    >
      <header>
        <h1>
          My workflows
        </h1>
      </header>
      <form
        action="/workflows"
        class="create-workflow"
        method="post"
      >
        <input
          name="csrfmiddlewaretoken"
          type="hidden"
          value=""
        />
        <button
          type="submit"
        >
          Create Workflow
        </button>
      </form>
      <div
        class="workflow-list owned"
      >
        <table>
          <thead>
            <tr>
              <th
                class="title"
              >
                <a
                  href="#"
                >
                  Title
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="owner"
              >
                Owner
              </th>
              <th
                class="privacy"
              >
                <a
                  href="#"
                >
                  Privacy
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="fetches-per-day"
              >
                <a
                  href="#"
                >
                  Auto updates
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="updated"
              >
                <a
                  href="#"
                >
                  Updated
                  /app/assets/icons/sort-descending.svg
                </a>
              </th>
              <th
                class="actions"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/3"
                >
                  Analysis
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/3"
                >
                  Fred Frederson
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/3"
                >
                  secret link
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/3"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/3"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
              <td
                class="actions"
              >
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    class="icon-button"
                    title="menu"
                  >
                    /app/assets/icons/context-menu.svg
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/1"
                >
                  Cleaning
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/1"
                >
                  Fred Frederson
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/1"
                >
                  public
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/1"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/1"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
              <td
                class="actions"
              >
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    class="icon-button"
                    title="menu"
                  >
                    /app/assets/icons/context-menu.svg
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/2"
                >
                  Charting
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/2"
                >
                  Fred Frederson
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/2"
                >
                  private
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/2"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/2"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
              <td
                class="actions"
              >
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    class="icon-button"
                    title="menu"
                  >
                    /app/assets/icons/context-menu.svg
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </main>
  </div>
</div>
`;

exports[`render Shared correctly 1`] = `
<div>
  <div
    class="page"
  >
    <nav
      class="main-nav"
    >
      <header>
        <a
          href="/workflows"
        >
          <img
            alt="Workbench"
            src="undefinedimages/workbench-logo-with-white-text.svg"
          />
        </a>
        <button
          class="toggle-open"
          title="menu"
        >
          /app/assets/icons/menu.svg
        </button>
      </header>
      <div
        class="details"
      >
        <ul>
          <li
            class=""
          >
            <a
              href="/workflows"
            >
              My workflows
            </a>
          </li>
          <li
            class="open"
          >
            <a>
              Shared with me
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="/workflows/examples"
            >
              Community workflows
            </a>
          </li>
          <li
            class="parent"
          >
            <a
              href="/lessons"
            >
              Tutorials
            </a>
          </li>
        </ul>
        <div
          class="user-paths"
        >
          <h3
            class="display-name"
          >
            Example User
          </h3>
          <ul>
            <li
              class="parent"
            >
              <a
                href="/settings/plan"
              >
                Plan & Billing
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Language
              </a>
            </li>
            <li>
              <a
                href="#"
              >
                Log Out
              </a>
              <form
                action="/account/logout/"
                class="hidden"
                method="post"
              >
                <input
                  name="csrfmiddlewaretoken"
                  type="hidden"
                  value=""
                />
                <input
                  name="next"
                  type="hidden"
                  value="/workflows/shared-with-me"
                />
                <input
                  type="submit"
                />
              </form>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="workflows"
    >
      <header>
        <h1>
          Workflows shared with me
        </h1>
      </header>
      <div
        class="workflow-list shared-with-me"
      >
        <table>
          <thead>
            <tr>
              <th
                class="title"
              >
                <a
                  href="#"
                >
                  Title
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="owner"
              >
                Owner
              </th>
              <th
                class="privacy"
              >
                <a
                  href="#"
                >
                  Privacy
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="fetches-per-day"
              >
                <a
                  href="#"
                >
                  Auto updates
                  /app/assets/icons/nothing.svg
                </a>
              </th>
              <th
                class="updated"
              >
                <a
                  href="#"
                >
                  Updated
                  /app/assets/icons/sort-descending.svg
                </a>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/8"
                >
                  Document search
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/8"
                >
                  Sally Sallerson
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/8"
                >
                  public
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/8"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/8"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
            </tr>
            <tr>
              <td
                class="title"
              >
                <a
                  href="/workflows/7"
                >
                  Messy data cleanup
                </a>
              </td>
              <td
                class="owner"
              >
                <a
                  href="/workflows/7"
                >
                  John Johnson
                </a>
              </td>
              <td
                class="privacy"
              >
                <a
                  href="/workflows/7"
                >
                  private
                </a>
              </td>
              <td
                class="fetches-per-day"
              >
                <a
                  href="/workflows/7"
                />
              </td>
              <td
                class="updated"
              >
                <a
                  href="/workflows/7"
                >
                  <time>
                    10y ago
                  </time>
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </main>
  </div>
</div>
`;
